--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-.board-cell {
-  background-color: black;
-  height: 20px;
-  width: 20px;
+.cell {
+  border: solid 3px black;
+  height: 70px;
+  width: 70px;
   margin: 10px;
 }
