--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,86 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100svh;
+  color: #fffce0;
+  background-color: #0b0b00;
+}
+
+header {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px;
+  gap: 30px;
+}
+
+/* form {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 10px;
+} */
+
+input,
+button {
+  width: 180px;
+  padding: 5px;
+  text-align: center;
+  border-radius: 15px;
+  border: none;
+  font-size: 1.2rem;
+}
+
+input {
+  color: #0b0b00;
+}
+
+input::placeholder {
+  color: #0b0b00;
+}
+
+button {
+  margin-top: 15px;
+}
+
+#playGame {
+  background-color: #0223a9;
+  color: #fffce0;
+}
+
+#resetGame {
+  color: #0b0b00;
+  background-color: #fdf37f;
+}
+
+#gameBoard {
+  display: grid;
+  grid-template: repeat(3, 90px) / repeat(3, 90px);
+  gap: 7px;
 }
 
 .cell {
-  border: solid 3px black;
-  height: 70px;
-  width: 70px;
-  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 3px #fdf37f;
+  border-radius: 10px;
+  height: 90px;
+  width: 90px;
+}
+
+.cell:hover {
+  border-color: #0223a9;
 }
