--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   font-family: "Poppins", sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
+  user-select: none;
 }
 
 main {
@@ -46,6 +47,7 @@ button {
 
 input {
   color: #0b0b00;
+  background-color: #fffce0;
 }
 
 input::placeholder {
@@ -54,6 +56,12 @@ input::placeholder {
 
 button {
   margin-top: 15px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+button:active {
+  background-color: #b220fc !important;
 }
 
 #playGame {
@@ -80,8 +88,13 @@ button {
   border-radius: 10px;
   height: 90px;
   width: 90px;
+  transition: 0.1s;
 }
 
 .cell:hover {
   border-color: #0223a9;
+}
+
+.cell:active {
+  border-color: #b220fc;
 }
