--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ button:active {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 2rem;
   border: solid 3px #fdf37f;
   border-radius: 10px;
   height: 90px;
