--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,11 @@ button:active {
 .cell:active {
   border-color: #b220fc;
 }
+
+.XSelected {
+  color: #0223a9;
+}
+
+.OSelected {
+  color: #fdf37f;
+}
